--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Discord</title>
+        <!-- CSS -->
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body class="debug">
+        <div class="container">
+            <header>
+                <div class="container my-row">HEADER-TOP</div>
+                <div class="container my-row">HEADER-BOTTOM</div>
+            </header>
+        </div>
+
+        <div class="container">
+            <main>
+                <div class="container my-row">
+                    MAIN
+                </div>
+            </main>
+        </div>
+        
+        <div class="container">
+            <footer>
+                <div class="container my-row">FOOTER-TOP</div>
+                <div class="container my-row">FOOTER-BOTTOM</div>
+            </footer>
+        </div>
+    </body>
 </html>
