--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body class="debug">
-        <div class="container">
-            <header>
-                <div class="container my-row">HEADER-TOP</div>
-                <div class="container my-row">HEADER-BOTTOM</div>
-            </header>
-        </div>
+            <div class="container">
+                <header>
+                    <nav class="container my-row">
+                        <div class="container my-row">
+                            <div><img src="" alt="Logo"></div>
+                            <div><a href="">link link link link</a></div>
+                            <div><img src="" alt="Logo"></div>
+                        </div>
+                </header>
+                <section>
+                    <div class="container big-container" id="first-section"></div>
+                </section>
+            </div>
 
         <div class="container">
             <main>
