--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                         </div>
                 </header>
                 <section>
-                    <div class="container big-container" id="first-section"></div>
+                    <div class="container big-container" id="first-section">
+                        <div class="container section-container"></div>
+                    </div>
                 </section>
             </div>
 
