--- a/index.html
+++ b/index.html
@@ -13,31 +13,54 @@
                 <header>
                     <nav class="container my-row">
                         <div class="container my-row">
-                            <div><img src="" alt="Logo"></div>
-                            <div><a href="">link link link link</a></div>
-                            <div><img src="" alt="Logo"></div>
+                            <div><img class="logo" src="" alt="Logo"></div>
+                            <div><a class="nav-link" href="">link</a></div>
+                            <div><a class="nav-link" href="">link</a></div>
+                            <div><a class="nav-link" href="">link</a></div>
+                            <div><a class="nav-link" href="">link</a></div>
+                            <div><img class="logo" src="" alt="Logo"></div>
                         </div>
                 </header>
                 <section>
-                    <div class="container big-container" id="first-section">
+                    <div class="container" id="first-section">
                         <div class="container section-container"></div>
                     </div>
                 </section>
             </div>
+            <div class="container">
+                <main>
+                    <section>
+                        <div class="container my-section" id="second-section">
+                            <div class="container main-container" id="mc-1"></div>
+                            <div class="container main-container" id="mc-2"></div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="container my-section" id="third-section">
+                            <div class="container main-container" id="mc-2"></div>
+                            <div class="container main-container" id="mc-1"></div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="container my-section" id="fourth-section">
+                            <div class="container main-container" id="mc-1"></div>
+                            <div class="container main-container" id="mc-2"></div>
+                        </div>
+                    </section>
+                    <div class="container my-section" id="fifth-section">
+                        <div class="container main-container" id="mc-3"></div>
+                    </div>
+                    <section>
 
-        <div class="container">
-            <main>
-                <div class="container my-row">
-                    MAIN
-                </div>
-            </main>
-        </div>
-        
-        <div class="container">
-            <footer>
-                <div class="container my-row">FOOTER-TOP</div>
-                <div class="container my-row">FOOTER-BOTTOM</div>
-            </footer>
-        </div>
+                    </section>
+                </main>
+            </div>
+            
+            <div class="container">
+                <footer>
+                    <div class="container my-row">FOOTER-TOP</div>
+                    <div class="container my-row">FOOTER-BOTTOM</div>
+                </footer>
+            </div>
     </body>
 </html>
