Fixata prima section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         </div>
                 </header>
                 <section>
-                    <div class="container" id="first-section">
+                    <div class="container my-section" id="first-section">
                         <div class="container section-container"></div>
                     </div>
                 </section>
