--- a/index.html
+++ b/index.html
@@ -58,8 +58,17 @@
             
             <div class="container">
                 <footer>
-                    <div class="container my-row">FOOTER-TOP</div>
-                    <div class="container my-row">FOOTER-BOTTOM</div>
+                    <div class="container my-section" id="footer-top">
+                        <div class="container fc" id="fc2"></div>
+                        <div class="container fc"></div>
+                        <div class="container fc"></div>
+                        <div class="container fc"></div>
+                        <div class="container fc"></div>
+                    </div>
+                    <div class="container my-row" id="footer-bottom">
+                        <div><img src="" alt="Logo" class="logo"></div>
+                        <div><button id="footer-button">Button</button></div>
+                    </div>
                 </footer>
             </div>
     </body>
