Modificate classi css

--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@
             <div class="container">
                 <main>
                     <section>
-                        <div class="container my-section" id="second-section">
+                        <div class="container my-section">
                             <div class="container main-container" id="mc-1"></div>
                             <div class="container main-container" id="mc-2"></div>
                         </div>
                     </section>
                     <section>
-                        <div class="container my-section" id="third-section">
+                        <div class="container my-section">
                             <div class="container main-container" id="mc-2"></div>
                             <div class="container main-container" id="mc-1"></div>
                         </div>
                     </section>
                     <section>
-                        <div class="container my-section" id="fourth-section">
+                        <div class="container my-section">
                             <div class="container main-container" id="mc-1"></div>
                             <div class="container main-container" id="mc-2"></div>
                         </div>
                     </section>
-                    <div class="container my-section" id="fifth-section">
+                    <div class="container my-section" id="green-con">
                         <div class="container main-container" id="mc-3"></div>
                     </div>
                     <section>
